kubernetes/cert-manager/letsencrypt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-cluster-issuer
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - nambrosini.xyz
    secretName: example-app-certificate
  rules:
    - host: nambrosini.xyz
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: example-app
              port:
                number: 80
